# sales_sage

./: README.md  pyproject.toml
SalesSageAPICollectionBruno/: Individual Sales Representative Performance Analysis.bru  Overall Sales Team Performance Summary.bru  bruno.json
apps/api/: langchain_singleton.py  urls.py  views.py
apps/core/management/commands/: import_data.py
config/: settings.py  urls.py
